--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -11,7 +12,8 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
-    "zod": "^3.24.1"
+    "xlsx": "^0.18.5",
+    "zod": "^3.24.2"
   },
   "scripts": {
     "start": "react-scripts start",
