--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "file-saver": "^2.0.5",
+    "highcharts": "^12.1.2",
+    "highcharts-react-official": "^3.2.1",
+    "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "scripts": {
@@ -38,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.3",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
   }
