--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "crypto-js": "^4.2.0",
     "file-saver": "^2.0.5",
     "highcharts": "^12.1.2",
     "highcharts-react-official": "^3.2.1",
