--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "file-saver": "^2.0.5",
+    "highcharts": "^12.1.2",
+    "highcharts-react-official": "^3.2.1",
+    "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
