--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
