--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
