--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "highcharts": "^12.1.2",
     "highcharts-react-official": "^3.2.1",
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
