--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "highcharts-react-official": "^3.2.1",
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
